<resources>
    <string name="app_name">QNo1P18ARID2982</string>
    <string name="title_activity_master_page">Master_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">QNo1P18ARID2982</string>
    <string name="nav_header_subtitle">studentlms@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_brands">Classes</string>
    <string name="menu_mobile">Search</string>
    <string name="menu_comparison">Add Student</string>
    <string name="brands">Classes</string>
    <string name="home">Home</string>
    <string name="comparison">Student Detail</string>
    <string name="mobiles">Search</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_detail">Mobile Detail</string>
    <string name="search">Search</string>
</resources>