<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_brands"
            android:icon="@drawable/brand"
            android:title="@string/menu_brands" />
        <item
            android:id="@+id/nav_mobile"
            android:icon="@drawable/ic_baseline_phone_iphone_24"
            android:title="@string/menu_mobile" />

        <item
            android:id="@+id/nav_comparison"
            android:icon="@drawable/ic_baseline_compare_24"
            android:title="@string/menu_comparison" />
    </group>
</menu>